# haskell-ide

./: .gitignore  stack.yaml
project-template/: ChangeLog.md  README.md  project-template.cabal
project-template/Text/: MultiFile.hs  ProjectTemplate.hs
project-template/Text/ProjectTemplate/: JSON.hs  Render.hs  Types.hs
project-template/app/: create-project.hs
project-template/test/Text/: ProjectTemplateSpec.hs
project-template/test/Text/ProjectTemplate/: JSONSpec.hs  RenderSpec.hs
