name:                project-template
version:             0.1.0.0
synopsis:            Specify Haskell project templates and generate files
description:         See initial blog post for explanation: <http://www.yesodweb.com/blog/2012/09/project-templates>
homepage:            https://github.com/fpco/haskell-ide
license:             BSD3
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.ProjectTemplate
                       Text.ProjectTemplate.JSON
                       Text.ProjectTemplate.Render
                       Text.ProjectTemplate.Types
  build-depends:       base                         >= 4          && < 5
                     , classy-prelude               >= 0.3
                     , aeson                        >= 0.6
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Text.ProjectTemplate.RenderSpec
                   Text.ProjectTemplate.JSONSpec
    type: exitcode-stdio-1.0
    build-depends:   base
                   , project-template
                   , classy-prelude
                   , hspec >= 1.3
                   , aeson
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/fpco/haskell-ide.git
