name:                project-template
version:             0.1.0.0
synopsis:            Specify Haskell project templates and generate files
description:         See initial blog post for explanation: <http://www.yesodweb.com/blog/2012/09/project-templates>
homepage:            https://github.com/fpco/haskell-ide
license:             BSD3
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@fpcomplete.com
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Text.ProjectTemplate
  build-depends:       base                         >= 4          && < 5
                     , classy-prelude-conduit       >= 0.4
                     , base64-bytestring
                     , system-filepath              >= 0.4
                     , system-fileio                >= 0.3
                     , text                         >= 0.11
                     , bytestring                   >= 0.9
                     , transformers                 >= 0.2
                     , mtl                          >= 2.0
                     , resourcet                    >= 0.4.1
  ghc-options:     -Wall

test-suite test
    hs-source-dirs: test
    main-is: Spec.hs
    other-modules: Text.ProjectTemplateSpec
    type: exitcode-stdio-1.0
    build-depends:   base
                   , project-template
                   , classy-prelude-conduit
                   , hspec >= 1.3
                   , transformers
                   , QuickCheck
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/fpco/haskell-ide.git
